--- a/k8s-fleetman-position-tracker/src/main/resources/application-production-microservice.properties
+++ b/k8s-fleetman-position-tracker/src/main/resources/application-production-microservice.properties
@@ -1,7 +1,7 @@
-spring.activemq.broker-url=tcp://fleetman-queue.default.svc.cluster.local:61616
+spring.activemq.broker-url=tcp://fleetman-queue.fleetman.svc.cluster.local:61616
 fleetman.position.queue=positionQueue
 
 # We'll use the default port 8080 for all microservices in production cluster.
 
 # This is for the replicated mongo cluster
-spring.data.mongodb.uri=mongodb://mongo-0.mongo.default.svc.cluster.local,mongo-1.mongo.default.svc.cluster.local,mongo-2.mongo.default.svc.cluster.local/fleetman
+spring.data.mongodb.uri=mongodb://mongo-0.mongo.fleetman.svc.cluster.local,mongo-1.mongo.fleetman.svc.cluster.local,mongo-2.mongo.fleetman.svc.cluster.local/fleetman
