--- a/k8s-fleetman-position-tracker/src/main/resources/application-production-microservice.properties
+++ b/k8s-fleetman-position-tracker/src/main/resources/application-production-microservice.properties
@@ -4,4 +4,4 @@ fleetman.position.queue=positionQueue
 # We'll use the default port 8080 for all microservices in production cluster.
 
 # This is for the replicated mongo cluster
-spring.data.mongodb.uri=mongodb://mongo-0.mongo.fleetman.svc.cluster.local,mongo-1.mongo.fleetman.svc.cluster.local,mongo-2.mongo.fleetman.svc.cluster.local/fleetman
+spring.data.mongodb.uri=mongodb://mongodb.fleetman.svc.cluster.local
